Updated for google play release
Added Appintro
Added Scoreboard
Added Aboutscreen
Imporved UI

--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -23,8 +23,8 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_profile"
                 android:src="@mipmap/user"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/colorPrimary"/>
 
@@ -32,7 +32,7 @@
 
         <LinearLayout
             android:id="@+id/connect_layout"
-            android:visibility="visible"
+            android:visibility="gone"
             android:gravity="center"
             android:orientation="vertical"
             android:background="@color/white"
@@ -63,7 +63,6 @@
 
         </LinearLayout>
 
-
         <FrameLayout
             android:background="@color/colorPrimaryDark"
             android:orientation="vertical"
@@ -73,24 +72,58 @@
 
             <LinearLayout
                 android:id="@+id/disconnect_layout"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:background="@color/colorPrimaryDark"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/viga"
+                        android:gravity="center_horizontal"
+                        android:text="Total points :"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_marginStart="5dp"
+                        android:id="@+id/points"
+                        android:text=".."
+                        android:textColor="@color/colorAccent"
+                        android:fontFamily="@font/viga"
+                        android:gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:focusable="true"
+                        android:clickable="true"
+                        android:layout_marginStart="5dp"
+                        android:src="@drawable/ic_info_outline_24dp"
+                        android:id="@+id/points_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
                 <TextView
-                    android:layout_marginBottom="20dp"
                     android:id="@+id/name"
-                    android:textSize="20sp"
+                    android:layout_marginBottom="20dp"
                     android:textColor="#FFF"
                     android:fontFamily="@font/viga"
-                    android:padding="20dp"
                     android:gravity="center_horizontal"
                     android:text="@string/you_are_signed_in"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+
 
                 <LinearLayout
                     android:gravity="center"
@@ -100,6 +133,7 @@
 
                     <Button
                         android:id="@+id/signOut"
+                        android:textColor="@color/white"
                         android:background="@drawable/button_background"
                         android:textAllCaps="false"
                         android:paddingStart="30dp"
