--- a/app/src/main/res/menu/menu_scores.xml
+++ b/app/src/main/res/menu/menu_scores.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.amsavarthan.trivia.MainActivity">
+    tools:context="com.amsavarthan.game.trivia.MainActivity">
 
     <item
         android:id="@+id/action_account"
