--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -33,7 +33,7 @@
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:fontFamily="@font/viga"
-           android:text="v 1.0.0"
+           android:text="v 1.2.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
 
@@ -122,6 +122,7 @@
                 android:layout_height="wrap_content" />
 
             <LinearLayout
+                android:onClick="openGooglePlay"
                 android:gravity="center_vertical"
                 android:foreground="?attr/selectableItemBackground"
                 android:clickable="true"
