--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -33,13 +33,13 @@
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:fontFamily="@font/viga"
-           android:text="v 1.2.0"
+           android:text="v 1.3.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
 
    </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         app:cardUseCompatPadding="true"
         android:padding="10dp"
         app:cardMaxElevation="6dp"
@@ -93,9 +93,9 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         app:cardUseCompatPadding="true"
         android:padding="10dp"
         app:cardMaxElevation="6dp"
@@ -122,7 +122,6 @@
                 android:layout_height="wrap_content" />
 
             <LinearLayout
-                android:onClick="openGooglePlay"
                 android:gravity="center_vertical"
                 android:foreground="?attr/selectableItemBackground"
                 android:clickable="true"
@@ -149,7 +148,7 @@
 
             <LinearLayout
                 android:gravity="center_vertical"
-                android:onClick="openWebsite"
+                android:onClick="openGooglePlay"
                 android:foreground="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
@@ -159,14 +158,15 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:src="@drawable/ic_public_white_24dp"
+                    android:tint="@color/white"
+                    android:src="@drawable/ic_droid_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:layout_marginStart="5dp"
                     android:textColor="@color/white"
-                    android:text="Checkout my website for more apps"
+                    android:text="Checkout my other apps"
                     android:fontFamily="@font/viga"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -232,7 +232,7 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
