--- a/app/src/main/res/layout/activity_start_quiz.xml
+++ b/app/src/main/res/layout/activity_start_quiz.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:visibility="invisible"
         android:onClick="onFabClick"
